finished upgrading to latest frameworks versions